<resources>
    <string name="app_name">Mi Movie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="guardar">Guardar</string>
    <string name="favorito">Favorito</string>
    <string name="compartir">Compartir</string>
    <string name="resumen">Resumen</string>
    <string name="populares">Populares</string>
    <string name="mejor_evaluadas">Mejor valoradas</string>
    <string name="proximo_estrenos">Próximos estrenos</string>
    <string name="esteban_machuca">Esteban Machuca</string>
    <string name="path_image">https://image.tmdb.org/t/p/w500/</string>
</resources>